--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ pydantic==2.4.2
 python-crontab
 sqlalchemy
 aiosqlite
-apscheduler==3.10.4 
+apscheduler==3.10.4
+python-dotenv==1.0.0
+cryptography==41.0.5 
