--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
     ports:
       - "3000:3000"
     environment:
+      - VITE_FRONTEND_URL=${VITE_FRONTEND_URL}
       - VITE_API_URL=${VITE_API_URL}
+      - VITE_WS_URL=${VITE_WS_URL}
     depends_on:
       - backend
 
@@ -23,4 +25,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DOCKER_HOST=unix:///var/run/docker.sock
+      - BACKEND_URL=${BACKEND_URL}
+      - BACKEND_WS_URL=${BACKEND_WS_URL}
     privileged: true  # Required for Docker-in-Docker 
