--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - VITE_FRONTEND_URL=${VITE_FRONTEND_URL}
       - VITE_API_URL=${VITE_API_URL}
       - VITE_WS_URL=${VITE_WS_URL}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
     depends_on:
       - backend
 
@@ -27,4 +28,5 @@ services:
       - DOCKER_HOST=unix:///var/run/docker.sock
       - BACKEND_URL=${BACKEND_URL}
       - BACKEND_WS_URL=${BACKEND_WS_URL}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
     privileged: true  # Required for Docker-in-Docker 
