--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,5 +20,5 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - DOCKER_HOST=unix:///var/run/docker.sock
+      - NODE_ENV=development
     command: uvicorn api:app --host 0.0.0.0 --port 8000 --reload 
