--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,11 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=development
+      - VITE_API_URL=${VITE_API_URL:-http://localhost:8000}
+      # Cloudflare Access Service Auth
+      - VITE_CF_CLIENT_ID=${VITE_CF_CLIENT_ID}
+      - VITE_CF_CLIENT_SECRET=${VITE_CF_CLIENT_SECRET}
+      - VITE_CF_ACCESS_TOKEN=${VITE_CF_ACCESS_TOKEN}
     command: npm run dev
 
   docker-daemon:
@@ -35,6 +40,8 @@ services:
     environment:
       - DOCKER_HOST=tcp://docker-daemon:2376
       - NODE_ENV=development
+      - ENVIRONMENT=development
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:3000,https://localhost:3000}
     depends_on:
       docker-daemon:
         condition: service_healthy
