--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,17 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
+      args:
+        - VITE_API_URL=${VITE_API_URL}
+        - VITE_CF_CLIENT_ID=${VITE_CF_CLIENT_ID}
+        - VITE_CF_CLIENT_SECRET=${VITE_CF_CLIENT_SECRET}
+        - VITE_CF_ACCESS_TOKEN=${VITE_CF_ACCESS_TOKEN}
     ports:
       - "3000:3000"
     environment:
       - VITE_FRONTEND_URL=${VITE_FRONTEND_URL}
       - VITE_API_URL=${VITE_API_URL}
-      - VITE_WS_URL=${VITE_WS_URL}
       - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
       # Cloudflare Access Service Auth
       - VITE_CF_CLIENT_ID=${VITE_CF_CLIENT_ID}
@@ -43,9 +47,8 @@ services:
     environment:
       - DOCKER_HOST=tcp://docker-daemon:2376
       - BACKEND_URL=${BACKEND_URL}
-      - BACKEND_WS_URL=${BACKEND_WS_URL}
       - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
-      - ENVIRONMENT=${ENVIRONMENT:-development}
+      - ENVIRONMENT=${ENVIRONMENT:-production}
     depends_on:
       docker-daemon:
         condition: service_healthy 
