--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,12 +40,14 @@ services:
     depends_on:
       - backend
 
+  # Docker daemon container - needs elevated privileges to manage user containers
+  # SECURITY NOTE: This container has elevated privileges BUT does not run user code
+  # User execution containers created by this daemon will be heavily restricted
   docker-daemon:
     image: docker:dind
     privileged: false
     security_opt:
-      - seccomp:./security/seccomp-profile.json
-      - no-new-privileges:true
+      - no-new-privileges:false  # Docker daemon needs some privilege escalation
     cap_drop:
       - ALL
     cap_add:
@@ -56,18 +58,23 @@ services:
       - CHOWN
       - SETFCAP
       - NET_BIND_SERVICE
+      - SYS_ADMIN  # Required for Docker daemon operations
+      - NET_ADMIN  # Required for network management
+      - SYS_CHROOT # Required for container isolation
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw  # Allow cgroup management
     read_only: false  # Docker daemon needs write access to its directories
     tmpfs:
       - /tmp:noexec,nosuid,size=100m
       - /var/tmp:noexec,nosuid,size=100m
     ulimits:
-      nproc: 100
+      nproc: 500  # Docker daemon needs more processes
       nofile:
-        soft: 1024
-        hard: 1024
-    mem_limit: 1g
-    cpus: 1.0
-    pids_limit: 200
+        soft: 2048
+        hard: 2048
+    mem_limit: 2g  # Docker daemon needs more memory
+    cpus: 2.0     # Docker daemon needs more CPU
+    pids_limit: 1000  # Docker daemon manages many processes
     environment:
       - DOCKER_TLS_CERTDIR=""  # Disable TLS for simplicity
     command: ["dockerd", "--host=tcp://0.0.0.0:2376", "--host=unix:///var/run/docker.sock", "--default-ulimit", "nofile=1024:1024", "--default-ulimit", "nproc=50:50"]
@@ -78,6 +85,8 @@ services:
       retries: 5
       start_period: 10s
 
+  # Backend API container - runs with restricted privileges
+  # This container creates user execution containers via the docker-daemon
   backend:
     build:
       context: .
