--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,29 +40,13 @@ services:
     depends_on:
       - backend
 
-  # Docker daemon container - needs elevated privileges to manage user containers
-  # SECURITY NOTE: This container has elevated privileges BUT does not run user code
+  # Docker daemon container - needs privileged mode for infrastructure operations
+  # SECURITY NOTE: This container has full privileges BUT does not run user code
   # User execution containers created by this daemon will be heavily restricted
   docker-daemon:
     image: docker:dind
-    privileged: false
-    security_opt:
-      - no-new-privileges:false  # Docker daemon needs some privilege escalation
-    cap_drop:
-      - ALL
-    cap_add:
-      - SETUID
-      - SETGID
-      - DAC_OVERRIDE
-      - FOWNER
-      - CHOWN
-      - SETFCAP
-      - NET_BIND_SERVICE
-      - SYS_ADMIN  # Required for Docker daemon operations
-      - NET_ADMIN  # Required for network management
-      - SYS_CHROOT # Required for container isolation
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:rw  # Allow cgroup management
+    privileged: true  # Required for Docker-in-Docker to mount filesystems and manage kernel features
+    # No additional security restrictions on daemon - it's infrastructure only
     read_only: false  # Docker daemon needs write access to its directories
     tmpfs:
       - /tmp:noexec,nosuid,size=100m
